--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@ethersproject/providers": "https://github.com/launchzone/ethers.js/releases/download/v5.3.1.1/ethers_providers.tar.gz",
     "assisted-json-rpc-provider": "^2.0.2",
+    "cookie-parser": "^1.4.6",
     "ethers": "^6.0.8",
+    "express": "^4.18.2",
     "mongodb": "4.1.2",
     "mongoose": "6.0.2",
     "mongoose-long": "^0.6.0",
