--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@ethersproject/providers": "https://github.com/launchzone/ethers.js/releases/download/v5.3.1.1/ethers_providers.tar.gz",
     "assisted-json-rpc-provider": "^2.0.2",
     "cookie-parser": "^1.4.6",
-    "ethers": "^6.0.8",
+    "ethers": "^5.1.4",
+    "excel4node": "^1.8.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongodb": "4.1.2",
     "mongoose": "6.0.2",
     "mongoose-long": "^0.6.0",
