--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "6.0.2",
     "mongoose-long": "^0.6.0",
     "moralis": "^2.15.0",
+    "node-cron": "^3.0.3",
     "node-fetch": "^2.6.9",
     "web3": "^1.8.2"
   }
