--- a/package.json
+++ b/package.json
@@ -10,24 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@moralisweb3/core": "^2.7.4",
-    "@moralisweb3/evm": "^2.0.0-alpha.2",
-    "@moralisweb3/evm-api": "^2.15.0",
-    "@moralisweb3/evm-utils": "^2.15.0",
-    "@moralisweb3/evm-wallet-connect-connector": "^2.0.0-alpha.2",
-    "assisted-json-rpc-provider": "^2.0.2",
     "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
-    "ethers": "^5.1.4",
-    "excel4node": "^1.8.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "mongodb": "4.1.2",
     "mongoose": "6.0.2",
     "mongoose-long": "^0.6.0",
-    "moralis": "^2.15.0",
     "node-cron": "^3.0.3",
-    "node-fetch": "^2.6.9",
-    "web3": "^1.8.2"
+    "node-fetch": "^2.6.9"
   }
 }
